# comic-localizer

./: .gitattributes  .gitignore  README.md
.github/workflows/: localizer-tests-ci.yml  translator-tests-ci.yml
cli/: .gitignore  README.md  main.py  pyproject.toml
extension/backend/: .gitignore  Dockerfile  Dockerfile_2  example_config.yaml  main.py  pyproject.toml
extension/frontend/: README.md  package-lock.json  package.json  popup.html  vite.config.ts
extension/frontend/configs/: buildTarget.ts  content.vite.config.ts  manifest.ts  page.vite.config.ts  popup.vite.config.ts  worker.vite.config.ts
extension/frontend/public/: manifest.json  page_styles.css
extension/frontend/scripts/: build.mjs
extension/frontend/src/: page.ts
extension/frontend/src/content/: content.ts
extension/frontend/src/content/sources/: CanvasSource.ts  DivSource.ts  ImageSource.ts  PictureSource.ts  SourceTags.ts  WelomaImageSource.ts  XImageSource.ts  factories.ts  index.ts  types.d.ts
extension/frontend/src/popup/: App.tsx  index.css  main.tsx
extension/frontend/src/popup/hooks/: useExtensionStore.ts
extension/frontend/src/shared/: response.ts  storage.ts  types.ts
extension/frontend/src/worker/: Translator.ts  worker.ts
localizer/: ARCHITECTURE.md  pyproject.toml
localizer/src/: main.py
localizer/src/comic_localizer/: get.py  utils.py
localizer/src/comic_localizer/cleaning/: get.py
localizer/src/comic_localizer/core/: plugin.py
localizer/src/comic_localizer/detection/: get.py  yolo.py
localizer/src/comic_localizer/drawing/: horizontal.py
localizer/src/comic_localizer/ocr/: debug.py  huggingface.py  minstral.py  openai.py
localizer/tests/: pyproject.toml
localizer/tests/src/: test_core_plugin.py  test_deepl.py  test_translation_openai.py
training/: .gitignore  pyproject.toml  train_yolo_detect.py  train_yolo_seg.py
training/ocr/: .gitignore  main.py  pyproject.toml
training/ocr/ocr/: dataset.py  metrics.py  model.py  test.py  train.py
training/text_masking/: .gitignore  generator.py  main.py  pyproject.toml  utils.py
translator/: ARCHITECTURE.md  README.md  pyproject.toml
translator/src/: main.py
translator/src/comic_localizer/cleaning/: all_white_cleaner.py  deepfillv2.py  lama.py  opencv.py  patched_ai_cleaner.py
translator/src/comic_localizer/color_detection/: basic.py  get.py  openai.py
translator/src/comic_localizer/drawing/: get.py
translator/src/comic_localizer/ocr/: get.py  google_cloud.py  manga_ocr.py
translator/src/comic_localizer/pipelines/: cbz.py  image_to_image.py
translator/src/comic_localizer/segmentation/: get.py  yolo.py
translator/src/comic_localizer/translation/: debug.py  deepl.py  get.py  huggingface.py  openai.py  pipe.py
translator/src/manga_translator/: get.py  utils.py
translator/src/manga_translator/cleaning/: all_white_cleaner.py  deepfillv2.py  get.py  lama.py  opencv.py  patched_ai_cleaner.py
translator/src/manga_translator/color_detection/: basic.py  get.py  openai.py
translator/src/manga_translator/core/: constants.py  plugin.py  typing.py
translator/src/manga_translator/detection/: get.py  yolo.py
translator/src/manga_translator/drawing/: get.py  horizontal.py
translator/src/manga_translator/ocr/: debug.py  get.py  google_cloud.py  huggingface.py  manga_ocr.py  minstral.py  openai.py
translator/src/manga_translator/pipelines/: cbz.py  image_to_image.py
translator/src/manga_translator/segmentation/: get.py  yolo.py
translator/src/manga_translator/translation/: debug.py  deepl.py  get.py  huggingface.py  openai.py  pipe.py
translator/tests/: pyproject.toml
translator/tests/src/: test_cbz_pipeline.py  test_components.py  test_core_plugin.py  test_deepl.py  test_google_cloud_ocr.py  test_huggingface_translator.py  test_image_to_image_pipeline.py  test_openai_ocr.py  test_patched_ai_cleaner.py  test_registry_and_factory.py  test_translation_openai.py  test_utils.py
ui/: main.py  pyproject.toml
