[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3.232",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "roboflow>=1.2.11",
    "rfdetr>=1.3.0",
    "simple-parsing>=0.1.7",
    "albumentationsx>=2.0.14",
    "wandb>=0.24.0",
    "weave>=0.52.25",
    "transformers>=4.57.3",
    "huggingface-hub[hf-xet]>=0.36.0",
    "sentencepiece>=0.2.1",
    "evaluate>=0.4.6",
    "datasets>=4.5.0",
    "jiwer>=4.0.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
