[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "manga-translator",
    "poethepoet>=0.31.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.poe.tasks]
test = "pytest src/"
coverage = "uv run coverage run -m pytest"

[tool.uv.sources]
manga-translator = { path = "..", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = [
    ".venv",
    "**/.venv",
]
